Add i18n support, unit system (metric/imperial), and connection status
- Add language support (de/en) with translation files
- Add unit system configuration (metric/imperial)
- Weight conversion between kg and lbs
- Add connection status indicator with auto-reconnect
- Add /api/user/config endpoint for user settings
- Fix optional chaining assignment syntax errors

--- a/config.json.example
+++ b/config.json.example
@@ -1,7 +1,9 @@
 {
   "users": {
     "your_username": {
-      "token": "your_secure_token_here"
+      "token": "your_secure_token_here",
+      "language": "de",
+      "units": "metric"
     }
   },
   "api_port": 8000,
